--- a/docs/web.config
+++ b/docs/web.config
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-    <system.webServer>
-<rewrite>
-  <rules>
-    <rule name="Angular" stopProcessing="true">
-      <match url=".*" />
-      <conditions logicalGrouping="MatchAll">
-        <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
-        <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
-      </conditions>
-      <action type="Rewrite" url="/" />
-    </rule>
-  </rules>
-</rewrite> 
-    </system.webServer>
-    <system.web>
-        <customErrors mode="Off" />
-    </system.web>
+  <system.webServer>
+  <rewrite>
+    <rules>
+      <rule name="ReactRouter Routes" stopProcessing="true">
+        <match url=".*" />
+        <conditions logicalGrouping="MatchAll">
+          <add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true" />
+          <add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true" />
+          <add input="{REQUEST_URI}" pattern="^/(docs)" negate="true" />
+        </conditions>
+        <action type="Rewrite" url="index.html" />
+      </rule>
+    </rules>
+  </rewrite>
+</system.webServer>
 </configuration>
